# 7n-rules

./: .cspell.json  .docgen-pairs.tsv  .docgen-scan.json  .gitignore  .gitleaks.toml  .jscpd.json  .licensee.json  .markdownlint-cli2.jsonc  .n-cursor.json  .n-minify-image.tsv  .n-rules.json  .oxfmtrc.json  .oxlintrc.json  .stylelintignore  .trufflehog-exclude  .v8rignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COVERAGE.md  Cargo.toml  deny.toml  eslint.config.js  hk.pkl  knip.json  nitra-cursor.json  package.json  pyproject.toml  readme.MD  думка.MD
.changes/: 1780116966051-2d8594.md  1780409191630-ef0aaf.md  1780409608016-7023a8.md  1780740228846-271939.md  1780744373340-ca7e71.md  1780745107437-b71e07.md  1780746736915-a1bc42.md  1780748202473-aa6b16.md  1780748698228-6b063b.md  1780749487494-77aa39.md  1780750751172-837d43.md  260604-1042.md  260604-1950.md  260606-1411.md  260606-2032.md  260607-0626.md  260607-0645.md  260607-0842.md  260607-2208.md  260609-0656.md  260617-2050.md  260620-0758.md  260620-0856.md
.claude/: settings.json  settings.local.json
.codex/: hooks.json
.github/: zizmor.yml
.regal/: config.yaml
.tmp/: com.nitra.ollama-environment.plist
.zed/: settings.json
demo/: .gitignore  CHANGELOG.md  index.html  (+5 more)
llm-lib/crates/llm-cascade/: Cargo.toml  README.md
llm-lib/crates/llm-cascade-napi/: Cargo.toml
llm-lib/crates/llm-cascade-napi/docs/: build.md  index.md
llm-lib/crates/llm-cascade-napi/src/: lib.rs
llm-lib/crates/llm-cascade-napi/src/docs/: index.md  lib.md
llm-lib/crates/llm-cascade/examples/: cursor_live.rs  ladder_live.rs  local_live.rs
llm-lib/crates/llm-cascade/examples/docs/: cursor_live.md  ladder_live.md  local_live.md
llm-lib/crates/llm-cascade/src/: acp.rs  lib.rs  local_cloud.rs  tiers.rs
llm-lib/crates/llm-cascade/src/acp/: session.rs  transport.rs
llm-lib/crates/llm-cascade/src/acp/docs/: index.md  presets.md  session.md  transport.md
llm-lib/crates/llm-cascade/src/docs/: acp.md  index.md  lib.md  local_cloud.md  tiers.md
llm-lib/crates/llm-lib/: Cargo.toml  README.md
llm-lib/crates/llm-lib-napi/: Cargo.toml
llm-lib/crates/llm-lib-napi/docs/: build.md
llm-lib/crates/llm-lib-napi/src/: lib.rs
llm-lib/crates/llm-lib-napi/src/docs/: index.md  lib.md
llm-lib/crates/llm-lib/examples/: batch_bench.rs  cursor_live.rs  ladder_live.rs  local_live.rs
llm-lib/crates/llm-lib/examples/docs/: batch_bench.md  cursor_live.md  index.md  ladder_live.md  local_live.md
llm-lib/crates/llm-lib/src/: acp.rs  batch.rs  lib.rs  local_cloud.rs
llm-lib/crates/llm-lib/src/acp/: presets.rs  session.rs  transport.rs
llm-lib/crates/llm-lib/src/acp/docs/: index.md  presets.md  session.md  transport.md
llm-lib/crates/llm-lib/src/docs/: acp.md  batch.md  index.md  lib.md  local_cloud.md  tiers.md
(+7049 files in other folders)
