[package]
name = "llm-cascade"
version = "0.1.0"
edition = "2021"
description = "Каскадний доступ до LLM: локальні тири, хмарні тири, ACP-агенти з особистою підпискою (Codex, Cursor) — Rust-аналог env-контракту @7n/llm-lib"
license = "Apache-2.0"

[dependencies]
genai = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# 0.11.x, не 1.x: agent-client-protocol-tokio ще не оновлений до
# agent-client-protocol 1.x — версії мають збігатись, інакше типи несумісні.
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "io-util", "time", "test-util"] }
