[package]
name = "llm-lib-napi"
version = "0.2.1"
edition = "2021"
description = "napi-rs адаптер llm-lib для @7n/llm-lib (тонкий JS-клієнт замість повторної реалізації ACP/tiers/local_cloud)"
license = "Apache-2.0"

[lib]
name = "llm_lib_napi"
crate-type = ["cdylib"]

[dependencies]
llm-lib = { path = "../llm-lib" }
napi = { version = "3", default-features = false, features = ["napi8", "serde-json", "tokio_rt"] }
napi-derive = "3"
serde_json = "1"

[build-dependencies]
napi-build = "2"
